--- a/webTruong.css
+++ b/webTruong.css
@@ -90,3 +90,18 @@ button {
     color: white;
     cursor: pointer;
 }
+
+.loading {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(255, 255, 255, 0.8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+    font-size: xx-large;
+    display: none;
+}
